# homework-37

calculator/: CMakeLists.txt  calcmw.h  calculator.cpp  calculator.ui
control/: CMakeLists.txt  control.cpp  control.h  control.ui
player/: CMakeLists.txt  main.qml
